--- a/aula_09/style.css
+++ b/aula_09/style.css
@@ -48,7 +48,7 @@
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #3a5fe4;
+    background-color: #122876;
     color: #fff;
     font-size: 1.1rem;
     cursor: pointer;
